# ImageTranslator

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROTOTYPE_IMPLEMENTATION_PLAN.md  README.md  RELEASE_TEST_MATRIX.md  SECURITY.md  SUPPORT.md  docker-compose.yml  run-guide.md  start-local-prototype.sh  temp.md  up-and-test.sh
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  enums.py  errors.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  asset.py  job.py  page.py  project.py  settings.py  text_region.py  user.py
backend/app/providers/: AGENTS.md  __init__.py  ocr.py  rendering.py  translation.py
backend/app/schemas/: asset.py  auth.py  common.py  job.py  page.py  project.py  region.py  runtime.py  settings.py  user.py
backend/app/services/: asset_service.py  auth_service.py  export_service.py  page_service.py  processing_service.py  project_service.py  region_service.py  upload_service.py
backend/app/storage/: base.py  factory.py  local.py  s3.py
backend/app/tests/: conftest.py  test_config.py  test_health.py  test_local_ml_providers.py  test_prepare_opus_mt_models.py  test_processing_failures.py  test_public_api.py  test_release_edge_cases.py  test_release_workflow_api.py  test_rendering.py  test_service_edges.py  test_utils.py  test_worker_tasks.py
backend/app/utils/: files.py  images.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/scripts/: prepare_opus_mt_models.py  setup_opus_mt_models.sh  up-and-test.sh
backend/tests/manual/: README.md  (+2 more)
(+122 files in other folders)
